--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
     "jsonwebtoken": "^9.0.2",
+    "nanoid": "^5.0.7",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
+    "slugify": "^1.6.6",
     "typeid-js": "^0.6.0",
     "zod": "^3.22.4"
   }
