Update package json and fix linting

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@repo/api",
-  "version": "0.0.1",
+  "name": "poster",
+  "version": "1.0.0",
   "private": true,
   "main": "./dist/main.js",
   "types": "./dist/main.d.ts",
@@ -11,7 +11,8 @@
   },
   "scripts": {
     "start": "node dist/main.js",
-    "build": "tsup",
+    "migrate": "prisma migrate deploy",
+    "build": "tsup && prisma generate",
     "dev": "tsup --watch --onSuccess 'node dist/main.js'",
     "seed": "tsup --config tsup.seed.config.ts --onSuccess 'node dist/modules/prisma/seed.js'",
     "lint": "eslint .",
@@ -29,11 +30,8 @@
     "@fastify/swagger": "^8.14.0",
     "@neato/config": "^3.0.0",
     "@prisma/client": "^5.12.1",
-    "argon2": "^0.40.1",
-    "cross-env": "^7.0.3",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
-    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.0.7",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
