--- a/package.json
+++ b/package.json
@@ -17,22 +17,30 @@
     "dev": "tsup --watch --onSuccess 'node dist/main.js'",
     "seed": "tsup --config tsup.seed.config.ts --onSuccess 'node dist/modules/prisma/seed.js'",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "script:makeKey": "tsx src/scripts/make-key"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.7",
+    "@vercel/style-guide": "^6.0.0",
+    "eslint": "8",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "prisma": "^5.12.1",
     "tsup": "7.2.0",
+    "tsx": "^4.11.0",
     "type-fest": "^4.15.0"
   },
   "dependencies": {
+    "@clack/prompts": "^0.7.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/swagger": "^8.14.0",
     "@neato/config": "^3.0.0",
     "@prisma/client": "^5.12.1",
     "fastify": "^4.26.2",
     "fastify-type-provider-zod": "^1.1.9",
+    "jsonwebtoken": "^9.0.2",
     "nanoid": "^5.0.7",
     "pino": "^8.20.0",
     "pino-pretty": "^11.0.0",
