--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start": "node dist/main.js",
     "migrate": "prisma migrate deploy",
     "build": "tsup && prisma generate",
-    "dev": "tsup --watch --onSuccess 'node dist/main.js'",
-    "seed": "tsup --config tsup.seed.config.ts --onSuccess 'node dist/modules/prisma/seed.js'",
+    "dev": "tsup --watch --onSuccess \"node dist/main.js\"",
+    "seed": "tsup --config tsup.seed.config.ts --onSuccess \"node dist/seed.js\"",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "script:makeKey": "tsx src/scripts/make-key"
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@clack/prompts": "^0.7.0",
+    "@faker-js/faker": "^8.4.1",
     "@fastify/cors": "^9.0.1",
     "@fastify/swagger": "^8.14.0",
     "@neato/config": "^3.0.0",
